fix when has overflow

--- a/frontend/src/css/Cell.css
+++ b/frontend/src/css/Cell.css
@@ -33,13 +33,13 @@
     }
 
     & > :first-child {
-      border-top-left-radius: 8px;
-      border-top-right-radius: 8px;
+      border-top-left-radius: 9px;
+      border-top-right-radius: 9px;
     }
 
     & > :last-child {
-      border-bottom-left-radius: 8px;
-      border-bottom-right-radius: 8px;
+      border-bottom-left-radius: 9px;
+      border-bottom-right-radius: 9px;
     }
 
     &:hover {
@@ -240,6 +240,7 @@
 .tray {
   display: flex;
   position: relative;
+  z-index: 1;
 
   &:first-child .cm-editor {
     border-top-left-radius: 9px;
